--- a/src/dex_blog_backend/Cargo.toml
+++ b/src/dex_blog_backend/Cargo.toml
@@ -11,4 +11,9 @@ crate-type = ["cdylib"]
 [dependencies]
 candid = "0.10"
 ic-cdk = "0.18"
-ic-cdk-timers = "0.12" # Feel free to remove this dependency if you don't need timers
+ic-cdk-timers = "0.12" 
+
+# --- DEPENDÊNCIAS ESSENCIAIS CORRIGIDAS ---
+serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11"
+# --- FIM ---
